implement basic weather forecast

--- a/WeatherDashboard/Client/Pages/FetchData.razor
+++ b/WeatherDashboard/Client/Pages/FetchData.razor
@@ -17,18 +17,14 @@ else
             <tr>
                 <th>Date</th>
                 <th>Temp. (C)</th>
-                <th>Temp. (F)</th>
-                <th>Summary</th>
             </tr>
         </thead>
         <tbody>
             @foreach (var forecast in forecasts)
             {
                 <tr>
-                    <td>@forecast.Date.ToShortDateString()</td>
+                    <td>@forecast.Date</td>
                     <td>@forecast.TemperatureC</td>
-                    <td>@forecast.TemperatureF</td>
-                    <td>@forecast.Summary</td>
                 </tr>
             }
         </tbody>
@@ -36,11 +32,11 @@ else
 }
 
 @code {
-    private WeatherForecast[] forecasts;
+    private WeatherGridRow[] forecasts;
 
     protected override async Task OnInitializedAsync()
     {
-        forecasts = await Http.GetFromJsonAsync<WeatherForecast[]>("WeatherForecast");
+        forecasts = await Http.GetFromJsonAsync<WeatherGridRow[]>("WeatherForecast");
     }
 
 }
