add multiple city forecast

--- a/WeatherDashboard/Client/Pages/FetchData.razor
+++ b/WeatherDashboard/Client/Pages/FetchData.razor
@@ -1,5 +1,5 @@
 ﻿@page "/fetchdata"
-@using WeatherDashboard.Client.Models.ViewModels
+@using WeatherDashboard.Client.ViewModels
 @inject HttpClient Http
 
 <h1>Weather forecast</h1>
