--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -1,10 +1,8 @@
-﻿@page "/fetchdata"
+﻿@page "/forecast"
 @using WeatherDashboard.Client.ViewModels
 @inject HttpClient Http
 
-<h1>Weather forecast</h1>
-
-<p>This component demonstrates fetching data from the server.</p>
+<h1>Three-day Weather Forecasts</h1>
 
 @if (forecasts == null)
 {
