--- a/WeatherDashboard/Client/Shared/NavMenu.razor
+++ b/WeatherDashboard/Client/Shared/NavMenu.razor
@@ -13,7 +13,7 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="fetchdata">
+            <NavLink class="nav-link" href="forecast">
                 <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
             </NavLink>
         </li>
