--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -1,10 +1,9 @@
 ﻿@page "/forecast"
-@using WeatherDashboard.Client.ViewModels
-@inject HttpClient Http
+@inherits ForecastBase
 
-<h1>Three-day Weather Forecasts</h1>
+<h1>Three-day Weather Forecasts (C)</h1>
 
-@if (forecasts == null)
+@if (Forecasts == null)
 {
     <p><em>Loading...</em></p>
 }
@@ -20,7 +19,7 @@ else
             </tr>
         </thead>
         <tbody>
-            @foreach (var forecast in forecasts)
+            @foreach (var forecast in Forecasts)
             {
                 <tr>
                     <td>@forecast.City</td>
@@ -31,14 +30,4 @@ else
             }
         </tbody>
     </table>
-}
-
-@code {
-    private WeatherGridRow[] forecasts;
-
-    protected override async Task OnInitializedAsync()
-    {
-        forecasts = await Http.GetFromJsonAsync<WeatherGridRow[]>("WeatherForecast");
-    }
-
 }
