--- a/WeatherDashboard/Client/Shared/NavMenu.razor
+++ b/WeatherDashboard/Client/Shared/NavMenu.razor
@@ -14,7 +14,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="forecast">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Fetch data
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather Forecast
             </NavLink>
         </li>
     </ul>
