--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -1,4 +1,5 @@
 ﻿@page "/forecast"
+@using ViewModels
 @inherits ForecastBase
 
 <h1>Three-day Weather Forecasts (C)</h1>
@@ -9,25 +10,12 @@
 }
 else
 {
-    <table class="table">
-        <thead>
-            <tr>
-                <th>Location</th>
-                <th>Today</th>
-                <th>Tomorrow</th>
-                <th>@DateTime.Today.AddDays(2).ToString("MM/dd")</th>
-            </tr>
-        </thead>
-        <tbody>
-            @foreach (var forecast in Forecasts)
-            {
-                <tr>
-                    <td>@forecast.City</td>
-                    <td>@forecast.Today</td>
-                    <td>@forecast.Tomorrow</td>
-                    <td>@forecast.ThirdDay</td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <SfGrid DataSource="@Forecasts">
+        <GridColumns>
+            <GridColumn Field="@nameof(WeatherGridRow.City)" HeaderText="Location"></GridColumn>
+            <GridColumn Field="@nameof(WeatherGridRow.Today)" HeaderText="Today"></GridColumn>
+            <GridColumn Field="@nameof(WeatherGridRow.Tomorrow)" HeaderText="Tomorrow"></GridColumn>
+            <GridColumn Field="@nameof(WeatherGridRow.ThirdDay)" HeaderText="@DateTime.Today.AddDays(2).ToString("MM/dd")"></GridColumn>
+        </GridColumns>
+    </SfGrid>
 }
