--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -6,5 +6,7 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Syncfusion.Blazor
+@using Syncfusion.Blazor.Grids  
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
