--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -2,7 +2,7 @@
 @using ViewModels
 @inherits ForecastBase
 
-<h1>Three-day Weather Forecasts (C)</h1>
+<h1>Three-day Weather Forecasts (&deg;C)</h1>
 
 @if (Forecasts == null)
 {
@@ -10,12 +10,74 @@
 }
 else
 {
-    <SfGrid DataSource="@Forecasts">
+    <SfGrid DataSource="@Forecasts" AllowSorting="true">
         <GridColumns>
-            <GridColumn Field="@nameof(WeatherGridRow.City)" HeaderText="Location"></GridColumn>
-            <GridColumn Field="@nameof(WeatherGridRow.Today)" HeaderText="Today"></GridColumn>
-            <GridColumn Field="@nameof(WeatherGridRow.Tomorrow)" HeaderText="Tomorrow"></GridColumn>
-            <GridColumn Field="@nameof(WeatherGridRow.ThirdDay)" HeaderText="@DateTime.Today.AddDays(2).ToString("MM/dd")"></GridColumn>
+            <GridColumn HeaderText="Location">
+            </GridColumn>
+            <GridColumn HeaderText="Today" 
+                        AllowSorting="false">
+            </GridColumn>
+            <GridColumn HeaderText="Tomorrow" 
+                        AllowSorting="false">
+            </GridColumn>
+            <GridColumn HeaderText="@DateTime.Today.AddDays(2).ToString("MM/dd")" 
+                        AllowSorting="false">
+            </GridColumn>
         </GridColumns>
+        <GridTemplates>
+            <RowTemplate Context="f">
+                @{
+                    var forecast = (f as WeatherGridRow);
+                    <td>
+                        @forecast.City
+                    </td>
+                    <td>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="@forecast.Today.Icon" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><b>Hi: </b>@forecast.Today.High</td>
+                                    <td><b>Lo: </b>@forecast.Today.Low</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                    <td>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="@forecast.Tomorrow.Icon" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><b>Hi: </b>@forecast.Tomorrow.High</td>
+                                    <td><b>Lo: </b>@forecast.Tomorrow.Low</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                    <td>
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td>
+                                        <img src="@forecast.ThirdDay.Icon" />
+                                    </td>
+                                </tr>
+                                <tr>
+                                    <td><b>Hi: </b>@forecast.ThirdDay.High</td>
+                                    <td><b>Lo: </b>@forecast.ThirdDay.Low</td>
+                                </tr>
+                            </tbody>
+                        </table>
+                    </td>
+                }
+            </RowTemplate>
+        </GridTemplates>
     </SfGrid>
 }
