extract forecast icon to component

--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -18,61 +18,22 @@ else
                       AllowSort="false"
                       >
         <DisplayTemplate>
-            <table>
-                <tr>
-                    <td>
-                        <img src="@((context as WeatherGridRow).Today.Icon)"/>
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <b>Lo: </b>@((context as WeatherGridRow).Today.Low)
-                    </td>
-                    <td>
-                        <b>Hi: </b>@((context as WeatherGridRow).Today.High)
-                    </td>
-                </tr>
-            </table>
+            <ForecastIcon DailyForecast="@((context as WeatherGridRow).Today)">
+            </ForecastIcon>
         </DisplayTemplate>
     </DxDataGridColumn>
     <DxDataGridColumn Caption="Tomorrow"
                       AllowSort="false">
         <DisplayTemplate>
-            <table>
-                <tr>
-                    <td>
-                        <img src="@((context as WeatherGridRow).Tomorrow.Icon)" />
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <b>Lo: </b>@((context as WeatherGridRow).Tomorrow.Low)
-                    </td>
-                    <td>
-                        <b>Hi: </b>@((context as WeatherGridRow).Tomorrow.High)
-                    </td>
-                </tr>
-            </table>
+            <ForecastIcon DailyForecast="@((context as WeatherGridRow).Tomorrow)">
+            </ForecastIcon>
         </DisplayTemplate>
     </DxDataGridColumn>
     <DxDataGridColumn Caption="@DateTime.Today.AddDays(2).ToString("MM/dd")"
                       AllowSort="false">
         <DisplayTemplate>
-            <table>
-                <tr>
-                    <td>
-                        <img src="@((context as WeatherGridRow).ThirdDay.Icon)" />
-                    </td>
-                </tr>
-                <tr>
-                    <td>
-                        <b>Lo: </b>@((context as WeatherGridRow).ThirdDay.Low)
-                    </td>
-                    <td>
-                        <b>Hi: </b>@((context as WeatherGridRow).ThirdDay.High)
-                    </td>
-                </tr>
-            </table>
+            <ForecastIcon DailyForecast="@((context as WeatherGridRow).ThirdDay)">
+            </ForecastIcon>
         </DisplayTemplate>
     </DxDataGridColumn>
 </DxDataGrid>
