--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -9,3 +9,4 @@
 @using Microsoft.JSInterop
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
+@using WeatherDashboard.Components
