--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -8,3 +8,4 @@
 @using Microsoft.JSInterop
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
+@using WeatherDashboard.Components
