--- a/WeatherDashboard.Components/ForecastIcon.razor
+++ b/WeatherDashboard.Components/ForecastIcon.razor
@@ -1,17 +1,19 @@
 ﻿@inherits ForecastIconBase
 
 <table>
-    <tr>
-        <td>
-            <img src="@DailyForecast.Icon" />
-        </td>
-    </tr>
-    <tr>
-        <td>
-            <b>Lo: </b>@DailyForecast.Low
-        </td>
-        <td>
-            <b>Hi: </b>@DailyForecast.High
-        </td>
-    </tr>
+    <tbody>
+        <tr>
+            <td>
+                <img src="@DailyForecast.Icon" />
+            </td>
+        </tr>
+        <tr>
+            <td>
+                <b>Lo: </b>@DailyForecast.Low
+            </td>
+            <td>
+                <b>Hi: </b>@DailyForecast.High
+            </td>
+        </tr>
+    </tbody>
 </table>
