--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -6,6 +6,8 @@
 @using Microsoft.AspNetCore.Components.Web.Virtualization
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
+@using Telerik.Blazor
+@using Telerik.Blazor.Components
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
 @using WeatherDashboard.Components
