--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -12,72 +12,42 @@ else
 {
     <SfGrid DataSource="@Forecasts" AllowSorting="true">
         <GridColumns>
-            <GridColumn HeaderText="Location">
+            <GridColumn Field="@nameof(WeatherGridRow.City)">
             </GridColumn>
-            <GridColumn HeaderText="Today" 
+            <GridColumn Field="@nameof(WeatherGridRow.Today)" 
                         AllowSorting="false">
+                <Template>
+                    @{ 
+                        var forecast = context as WeatherGridRow;
+                        <div class="@forecast.Today.Color">
+                            <ForecastIcon DailyForecast="forecast.Today"></ForecastIcon>
+                        </div>
+                    }
+                </Template>
             </GridColumn>
-            <GridColumn HeaderText="Tomorrow" 
+            <GridColumn Field="@nameof(WeatherGridRow.Tomorrow)"
                         AllowSorting="false">
+                <Template>
+                    @{
+                        var forecast = context as WeatherGridRow;
+                        <div class="@forecast.Tomorrow.Color">
+                            <ForecastIcon DailyForecast="forecast.Tomorrow"></ForecastIcon>
+                        </div>
+                    }
+                </Template>
             </GridColumn>
-            <GridColumn HeaderText="@DateTime.Today.AddDays(2).ToString("MM/dd")" 
+            <GridColumn Field="@nameof(WeatherGridRow.ThirdDay)"
+                        HeaderText="@DateTime.Today.AddDays(2).ToString("MM/dd")"
                         AllowSorting="false">
+                <Template>
+                    @{
+                        var forecast = context as WeatherGridRow;
+                        <div class="@forecast.ThirdDay.Color">
+                            <ForecastIcon DailyForecast="forecast.ThirdDay"></ForecastIcon>
+                        </div>
+                    }
+                </Template>
             </GridColumn>
         </GridColumns>
-        <GridTemplates>
-            <RowTemplate Context="f">
-                @{
-                    var forecast = (f as WeatherGridRow);
-                    <td>
-                        @forecast.City
-                    </td>
-                    <td>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <img src="@forecast.Today.Icon" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Hi: </b>@forecast.Today.High</td>
-                                    <td><b>Lo: </b>@forecast.Today.Low</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                    <td>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <img src="@forecast.Tomorrow.Icon" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Hi: </b>@forecast.Tomorrow.High</td>
-                                    <td><b>Lo: </b>@forecast.Tomorrow.Low</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                    <td>
-                        <table>
-                            <tbody>
-                                <tr>
-                                    <td>
-                                        <img src="@forecast.ThirdDay.Icon" />
-                                    </td>
-                                </tr>
-                                <tr>
-                                    <td><b>Hi: </b>@forecast.ThirdDay.High</td>
-                                    <td><b>Lo: </b>@forecast.ThirdDay.Low</td>
-                                </tr>
-                            </tbody>
-                        </table>
-                    </td>
-                }
-            </RowTemplate>
-        </GridTemplates>
     </SfGrid>
 }
