--- a/WeatherDashboard.Components/ForecastIcon.razor
+++ b/WeatherDashboard.Components/ForecastIcon.razor
@@ -1,19 +1,21 @@
 ﻿@inherits ForecastIconBase
 
-<table>
-    <tbody>
-        <tr>
-            <td>
-                <img src="@DailyForecast.Icon" />
-            </td>
-        </tr>
-        <tr>
-            <td>
-                <b>Lo: </b>@DailyForecast.Low
-            </td>
-            <td>
-                <b>Hi: </b>@DailyForecast.High
-            </td>
-        </tr>
-    </tbody>
-</table>
+<div class="@DailyForecast.Color">
+    <table>
+        <tbody>
+            <tr>
+                <td>
+                    <img src="@DailyForecast.Icon" />
+                </td>
+            </tr>
+            <tr>
+                <td>
+                    <b>Lo: </b>@DailyForecast.Low
+                </td>
+                <td>
+                    <b>Hi: </b>@DailyForecast.High
+                </td>
+            </tr>
+        </tbody>
+    </table>
+</div>
