--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -7,7 +7,8 @@
 @using Microsoft.AspNetCore.Components.WebAssembly.Http
 @using Microsoft.JSInterop
 @using Syncfusion.Blazor
-@using Syncfusion.Blazor.Grids  
+@using Syncfusion.Blazor.Buttons 
+@using Syncfusion.Blazor.Grids
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
 @using WeatherDashboard.Components
