tweak forecast color icon properties

--- a/WeatherDashboard.Components/ForecastIcon.razor.css
+++ b/WeatherDashboard.Components/ForecastIcon.razor.css
@@ -1,19 +1,19 @@
-﻿.cold {
+﻿.Cold {
     background-color: lightblue
 }
 
-.cool {
+.Cool {
     background-color: lightgreen
 }
 
-.average {
+.Average {
     background-color: lightyellow
 }
 
-.warm {
+.Warm {
     background-color: lightsalmon
 }
 
-.hot {
+.Hot {
     background-color: lightcoral
 }
