--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -8,6 +8,8 @@
 @using Microsoft.JSInterop
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Buttons 
+@using Syncfusion.Blazor.Data 
+@using Syncfusion.Blazor.DropDowns 
 @using Syncfusion.Blazor.Grids
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
