--- a/WeatherDashboard/Client/Pages/Forecast.razor
+++ b/WeatherDashboard/Client/Pages/Forecast.razor
@@ -16,7 +16,8 @@ else
                     Placeholder="e.g. Atlanta"
                     Query="@GetQuery()"
                     @onkeypress="@(e => OnAutoCompleteKeyPressed(e))"
-                    @onkeydown="@(e => OnAutoCompleteKeyDown(e))">
+                    @onkeydown="@(e => OnAutoCompleteKeyDown(e))"
+                    Width="250px">
         <SfDataManager Url="@GetSearchUrl()"
                        Adaptor="Adaptors.UrlAdaptor"
                        CrossDomain="true">
