--- a/WeatherDashboard/Client/Shared/NavMenu.razor
+++ b/WeatherDashboard/Client/Shared/NavMenu.razor
@@ -13,8 +13,13 @@
             </NavLink>
         </li>
         <li class="nav-item px-3">
-            <NavLink class="nav-link" href="forecast">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Weather Forecast
+            <NavLink class="nav-link" href="datagrid">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Data Grid
+            </NavLink>
+        </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="autocomplete">
+                <span class="oi oi-list-rich" aria-hidden="true"></span> Auto Complete
             </NavLink>
         </li>
     </ul>
