--- a/WeatherDashboard/Client/Shared/NavMenu.razor
+++ b/WeatherDashboard/Client/Shared/NavMenu.razor
@@ -1,5 +1,5 @@
 ﻿<div class="top-row pl-4 navbar navbar-dark">
-    <a class="navbar-brand" href="">WeatherDashboard</a>
+    <a class="navbar-brand" href="">Dashboard Home</a>
     <button class="navbar-toggler" @onclick="ToggleNavMenu">
         <span class="navbar-toggler-icon"></span>
     </button>
@@ -19,7 +19,7 @@
         </li>
         <li class="nav-item px-3">
             <NavLink class="nav-link" href="autocomplete">
-                <span class="oi oi-list-rich" aria-hidden="true"></span> Auto Complete
+                <span class="oi oi-circle-check" aria-hidden="true"></span> Auto Complete
             </NavLink>
         </li>
     </ul>
