create state auto complete

--- a/WeatherDashboard.Components/LocalAutoComplete.razor
+++ b/WeatherDashboard.Components/LocalAutoComplete.razor
@@ -4,6 +4,7 @@
 
 <SfAutoComplete TItem="string"
                 TValue="INamed"
+                Placeholder="@Placeholder"
                 DataSource="@GetSource()">
     <AutoCompleteFieldSettings Value="Name"></AutoCompleteFieldSettings>
 </SfAutoComplete>
