swap forecast values

--- a/WeatherDashboard.Components/ForecastIcon.razor
+++ b/WeatherDashboard.Components/ForecastIcon.razor
@@ -10,10 +10,10 @@
             </tr>
             <tr>
                 <td>
-                    <b>Lo: </b>@DailyForecast.Low
+                    <b>High: </b>@DailyForecast.High
                 </td>
                 <td>
-                    <b>Hi: </b>@DailyForecast.High
+                    <b>Low: </b>@DailyForecast.Low
                 </td>
             </tr>
         </tbody>
