update auto complete page

--- a/WeatherDashboard/Client/Pages/AutoComplete.razor
+++ b/WeatherDashboard/Client/Pages/AutoComplete.razor
@@ -5,12 +5,14 @@
 <table>
     <tr>
         <td>
+            <h6>Remote Data</h6>
             <RemoteAutoComplete></RemoteAutoComplete>
         </td>
         <td>
-        <LocalAutoComplete NamedSources="@GetStates()"
-                           Placeholder="State, e.g. Georgia">
-        </LocalAutoComplete>
+            <h6>Local Data</h6>
+            <LocalAutoComplete NamedSources="@GetStates()"
+                               Placeholder="State, e.g. Georgia">
+            </LocalAutoComplete>
         </td>
     </tr>
 </table>
