add charts page

--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -8,6 +8,7 @@
 @using Microsoft.JSInterop
 @using Syncfusion.Blazor
 @using Syncfusion.Blazor.Buttons 
+@using Syncfusion.Blazor.Charts 
 @using Syncfusion.Blazor.Data 
 @using Syncfusion.Blazor.DropDowns 
 @using Syncfusion.Blazor.Grids
