--- a/WeatherDashboard/Client/Shared/NavMenu.razor
+++ b/WeatherDashboard/Client/Shared/NavMenu.razor
@@ -22,6 +22,11 @@
                 <span class="oi oi-circle-check" aria-hidden="true"></span> Auto Complete
             </NavLink>
         </li>
+        <li class="nav-item px-3">
+            <NavLink class="nav-link" href="charts">
+                <span class="oi oi-bar-chart" aria-hidden="true"></span> Charts
+            </NavLink>
+        </li>
     </ul>
 </div>
 
