historical data tweaks

--- a/WeatherDashboard.Components/RemoteAutoComplete.razor
+++ b/WeatherDashboard.Components/RemoteAutoComplete.razor
@@ -7,8 +7,7 @@
                 Placeholder="City, e.g. Atlanta"
                 Query="@GetQuery()"
                 @onkeypress="@(e => OnAutoCompleteKeyPressed(e))"
-                @onkeydown="@(e => OnAutoCompleteKeyDown(e))"
-                Width="250px">
+                @onkeydown="@(e => OnAutoCompleteKeyDown(e))">
     <SfDataManager Url="@GetSearchUrl()"
                    Adaptor="Adaptors.UrlAdaptor"
                    CrossDomain="true">
