add chart marker

--- a/WeatherDashboard/Client/Pages/Charts.razor
+++ b/WeatherDashboard/Client/Pages/Charts.razor
@@ -18,6 +18,7 @@
                          XName="@nameof(DailyWeather.Date)"
                          YName="@nameof(DailyWeather.High)"
                          Type="ChartSeriesType.Line">
+                <ChartMarker Visible="true" Height="10" Width="10" />
             </ChartSeries>
         }
         <ChartLegendSettings Visible="true"></ChartLegendSettings>
