--- a/WeatherDashboard/Client/Pages/AutoComplete.razor
+++ b/WeatherDashboard/Client/Pages/AutoComplete.razor
@@ -5,14 +5,14 @@
 <table>
     <tr>
         <td>
-            <h6>Remote Data</h6>
-            <RemoteAutoComplete></RemoteAutoComplete>
-        </td>
-        <td>
-            <h6>Local Data</h6>
+            <h6>Static Data</h6>
             <LocalAutoComplete NamedSources="@GetStates()"
                                Placeholder="State, e.g. Georgia">
             </LocalAutoComplete>
+        </td>
+        <td>
+            <h6>Dynamic Data</h6>
+            <RemoteAutoComplete></RemoteAutoComplete>
         </td>
     </tr>
 </table>
