--- a/WeatherDashboard/Client/Pages/Charts.razor
+++ b/WeatherDashboard/Client/Pages/Charts.razor
@@ -10,6 +10,11 @@
                        LabelFormat="MM/dd"
                        ValueType="ValueType.DateTime">
     </ChartPrimaryXAxis>
+    <ChartPrimaryYAxis LabelFormat="{value}&deg;C" RangePadding="ChartRangePadding.None" Minimum="0" Maximum="50" Interval="10">
+        <ChartAxisLineStyle Width="0"></ChartAxisLineStyle>
+        <ChartAxisMajorTickLines Width="0"></ChartAxisMajorTickLines>
+    </ChartPrimaryYAxis>
+    <ChartTooltipSettings Enable="true"></ChartTooltipSettings>
     <ChartSeriesCollection>
         @foreach (var source in Sources)
         {
@@ -17,6 +22,30 @@
                          Name="@source.City"
                          XName="@nameof(DailyWeather.Date)"
                          YName="@nameof(DailyWeather.High)"
+                         Type="ChartSeriesType.Line">
+                <ChartMarker Visible="true" Height="10" Width="10" />
+            </ChartSeries>
+        }
+        <ChartLegendSettings Visible="true"></ChartLegendSettings>
+    </ChartSeriesCollection>
+</SfChart>
+<SfChart Title="Daily Lows (&deg;C) - Past 7 Days">
+    <ChartPrimaryXAxis IntervalType="IntervalType.Days"
+                       LabelFormat="MM/dd"
+                       ValueType="ValueType.DateTime">
+    </ChartPrimaryXAxis>
+    <ChartPrimaryYAxis LabelFormat="{value}&deg;C" RangePadding="ChartRangePadding.None" Minimum="0" Maximum="50" Interval="10">
+        <ChartAxisLineStyle Width="0"></ChartAxisLineStyle>
+        <ChartAxisMajorTickLines Width="0"></ChartAxisMajorTickLines>
+    </ChartPrimaryYAxis>
+    <ChartTooltipSettings Enable="true"></ChartTooltipSettings>
+    <ChartSeriesCollection>
+        @foreach (var source in Sources)
+        {
+            <ChartSeries DataSource="source.DailyWeathers"
+                         Name="@source.City"
+                         XName="@nameof(DailyWeather.Date)"
+                         YName="@nameof(DailyWeather.Low)"
                          Type="ChartSeriesType.Line">
                 <ChartMarker Visible="true" Height="10" Width="10" />
             </ChartSeries>
