--- a/WeatherDashboard/Client/Pages/Index.razor
+++ b/WeatherDashboard/Client/Pages/Index.razor
@@ -1,3 +1,10 @@
 ﻿@page "/"
 
-<h1>Hello, Planet FWD!</h1>
+<h1>Using Third-party Component Libraries</h1>
+<h2>Syncfusion</h2>
+<ul>
+    <li>Small business license (free for us!)</li>
+    <li>Industry standard components available</li>
+    <li>Extensive charting capabilities</li>
+    <li>Built-in document (xls, doc, pdf) support</li>
+</ul>
