--- a/WeatherDashboard/Client/_Imports.razor
+++ b/WeatherDashboard/Client/_Imports.razor
@@ -12,6 +12,7 @@
 @using Syncfusion.Blazor.Data 
 @using Syncfusion.Blazor.DropDowns 
 @using Syncfusion.Blazor.Grids
+@using Syncfusion.Blazor.Layouts 
 @using WeatherDashboard.Client
 @using WeatherDashboard.Client.Shared
 @using WeatherDashboard.Components
