--- a/WeatherDashboard.Components/RemoteAutoComplete.razor
+++ b/WeatherDashboard.Components/RemoteAutoComplete.razor
@@ -6,7 +6,8 @@
                 TItem="LocationResult"
                 Query="@GetQuery()"
                 @onkeypress="@(e => OnAutoCompleteKeyPressed(e))"
-                @onkeydown="@(e => OnAutoCompleteKeyDown(e))">
+                @onkeydown="@(e => OnAutoCompleteKeyDown(e))"
+                Placeholder="Location, e.g. Seattle">
     <SfDataManager Url="@GetSearchUrl()"
                    Adaptor="Adaptors.UrlAdaptor"
                    CrossDomain="true">
